# test15

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: cat.h.1F62E4D8CA955D63.idx  cat.h.A4DC9C1AB680B89F.idx  color.h.9FAC14363F6F3968.idx  color.h.DBB9D410F4537207.idx  gamestate.h.231FEE22620C9687.idx  gamestate.h.642F07FD0640CE65.idx  main.c.67C81D5D600E31A9.idx  main.c.CC551AE0DABCC436.idx  stage.h.4455E71AC89CE51D.idx  stage.h.49640A09C0431E08.idx  ui.h.640B481D0A8351F6.idx
src/: CMakeLists.txt  cat.c  cat.h  color.c  color.h  gamestate.c  gamestate.h  main.c  main.h  stage.c  stage.h  ui.c  ui.h
